--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services' // Use Firebase Analytics
 }
 
 android {
@@ -7,17 +8,14 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId "com.example.androidappforgoogleanalytics4"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+        multiDexEnabled true // Required for AdMob
 
-    packagingOptions {
-        pickFirst "androidsupportmultidexversion.txt"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -34,27 +32,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
-
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-analytics' // Declare the dependency for the Analytics library
+    implementation 'com.google.android.gms:play-services-ads:20.3.0' // Declare the dependency for the AdMobs library
+    implementation 'androidx.multidex:multidex:2.0.1' // Required for AdMob
+    implementation platform('com.google.firebase:firebase-bom:28.4.0') // Import the BoM for the Firebase platform
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:28.3.0')
-
-    // Add the Firebase SDK for Google Analytics
-    implementation 'com.google.firebase:firebase-analytics'
-
-    // Initialize the Mobile Ads SDK
-    implementation 'com.google.android.gms:play-services-ads:20.2.0'
 }
-
-apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
