--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.example.androidappforgoogleanalytics4">
 
+    <!-- Include the required permissions for Mobile Ads -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/store_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
-        <activity
-            android:name=".DisplayMessageActivity"
-            android:parentActivityName=".MainActivity">
+        android:theme="@style/Theme.AndroidAppForGoogleAnalytics4"> 
 
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-        <activity
-            android:name=".MensClothesActivity"
-            android:parentActivityName=".MainActivity">
+        <!-- Connect with AdMob app ID -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5430752373775862~1101865194" />
 
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
+        <!-- Create activity for each product -->
+        <activity android:name=".ItemZappixActivity"></activity>
+        <activity android:name=".ItemPoyoActivity" />
+        <activity android:name=".ItemPigzartActivity" />
+        <activity android:name=".ItemMasonsActivity" />
+        <activity android:name=".ItemLunchpodActivity" />
+        <activity android:name=".ItemKioskActivity" />
+        <activity android:name=".ItemIsoterniaActivity" />
+        <activity android:name=".ItemFuturisActivity" />
+        <activity android:name=".ItemFuelworksActivity" />
+        <activity android:name=".ItemFlexigenActivity" />
+        <activity android:name=".ItemComvergesActivity" />
+        <activity android:name=".ItemComptonActivity" />
+        <activity android:name=".ProductsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3647378310933387~2604653169"/>
-
     </application>
 
 </manifest>
