--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.androidappforgoogleanalytics4"
+        applicationId "com.exemplary.androidappforgoogleanalytics4"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
