--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:20.3.0' // Declare the dependency for the AdMobs library
     implementation 'androidx.multidex:multidex:2.0.1' // Required for AdMob
     implementation platform('com.google.firebase:firebase-bom:28.4.0') // Import the BoM for the Firebase platform
-    implementation 'com.google.firebase:firebase-analytics' // Declare the dependency for the Analytics library
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
