--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 08 14:26:29 PDT 2021
-sdk.dir=/Users/aoppenheimer/Library/Android/sdk
+#Wed Nov 17 11:42:43 PST 2021
+sdk.dir=/Users/jackgraham/Library/Android/sdk
