--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     def billing_version = "4.0.0"
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
