--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.exemplary.itsAnApp">
+    package="com.exemplary.itsAnApp" >
     <!-- Include the required permissions for Mobile Ads -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,17 +13,21 @@
         android:label="@string/store_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.itsAnApp">
-        <activity android:name=".OrderConfirmationActivity"></activity>
-        <activity android:name=".BillingInformationActivity" android:parentActivityName=".ShippingInformationActivity"/>
-        <activity android:name=".ShippingInformationActivity" android:parentActivityName=".CartActivity"/>
+        android:theme="@style/Theme.itsAnApp" >
+        <activity android:name=".OrderConfirmationActivity" />
+        <activity
+            android:name=".BillingInformationActivity"
+            android:parentActivityName=".ShippingInformationActivity" />
+        <activity
+            android:name=".ShippingInformationActivity"
+            android:parentActivityName=".CartActivity" />
         <activity android:name=".CartActivity" /> <!-- Connect with AdMob app ID -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-5430752373775862~1101865194" /> <!-- Create activity for each product -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/store_name">
+            android:label="@string/store_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -52,11 +58,10 @@
             android:name=".ItemFuelworksActivity"
             android:label="@string/store_name"
             android:parentActivityName=".ProductsActivity" />
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-5430752373775862~1101865194" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
