--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.exemplary.itsAnApp" >
+    package="com.exemplary.itsAnApp">
     <!-- Include the required permissions for Mobile Ads -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,7 +13,10 @@
         android:label="@string/store_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.itsAnApp" >
+        android:theme="@style/Theme.itsAnApp">
+        <activity
+            android:name=".TestActivity"
+            android:exported="false" />
         <activity android:name=".OrderConfirmationActivity" />
         <activity
             android:name=".BillingInformationActivity"
@@ -27,7 +30,7 @@
             android:value="ca-app-pub-5430752373775862~1101865194" /> <!-- Create activity for each product -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/store_name" >
+            android:label="@string/store_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
