--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'com.google.android.gms:play-services-analytics-impl:17.0.0'
     def billing_version = "4.0.0"
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
