--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,5 @@
-plugins {
-    id 'com.android.application'
-    id 'com.google.gms.google-services' // Use Firebase Analytics
-}
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -48,10 +46,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.firebase:firebase-core:19.0.0'
-    implementation 'com.google.android.gms:play-services-ads:20.3.0' // Declare the dependency for the AdMobs library
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'androidx.multidex:multidex:2.0.1' // Required for AdMob
     implementation platform('com.google.firebase:firebase-bom:28.4.0') // Import the BoM for the Firebase platform
-    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+    implementation 'com.google.firebase:firebase-analytics'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
